[package]
name = "esp_iot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
apexsky_proto = { path = "../apexsky/apexsky_proto" }
buttplug = "8.0.0"
chrono = "0.4.38"
prost = "0.13.1"
rand = "0.8.5"
tokio = { version = "1.39.3", features = ["full"] }
tonic = { version = "0.12.1", features = ["zstd"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "chrono", "env-filter"] }
tracing-appender = "0.2.3"
