workspace = { members = ["apexsky-derive"] }

[package]
name = "apexsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "apexsky"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.150"
lazy_static = "1.4"
config = { version = "0.13", default-features = false, features = ["toml", "yaml"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
ratatui = { version = "0.24.0", features = ["all-widgets", "serde"] }
crossterm = "0.27.0"
anyhow = "1.0.75"
fluent = "0.16.0"
unic-langid = "0.9.3"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
sys-locale = "0.3.1"
unicode-width = "0.1.11"
serde_json = { version = "1.0.108", features = ["indexmap", "preserve_order"] }
entropy = "0.4.2"
rand = "0.8.5"
indexmap = { version = "2.1.0", features = ["serde"] }
zbus = "3.14.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"
wat = "1.0"
wasmedge-sdk = { version = "0.13.2", features = ["static", "standalone", "wasi_nn"], optional = true }
wasmer = { version = "4.2.5", optional = true }
wasmer-wasix = { version = "0.18.0", optional = true}
apexsky-derive = { path = "apexsky-derive" }
ctrlc = "3.4.2"
chinese-lunisolar-calendar = "0.2.0"
paste = "1.0.14"

[features]
default = ["wasmer"]
wasmedge = ["dep:wasmedge-sdk"]
wasmer = ["dep:wasmer", "dep:wasmer-wasix"]
