[package]
name = "apexsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "apexsky"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.153"
lazy_static = "1.4"
config = { version = "0.14", default-features = false, features = ["toml", "yaml"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.9"
ratatui = { version = "0.25.0", features = ["all-widgets", "serde"] }
crossterm = "0.27.0"
anyhow = "1.0"
fluent = "0.16.0"
unic-langid = "0.9.4"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
sys-locale = "0.3.1"
unicode-width = "0.1.11"
serde_json = { version = "1.0", features = ["indexmap", "preserve_order"] }
entropy = "0.4.2"
rand = "0.8.5"
indexmap = { version = "2.2.2", features = ["serde"] }
zbus = "3.14.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.33"
chinese-lunisolar-calendar = "0.2.0"
obfstr = "0.4.3"
include-flate = "0.3.0"
prost = "0.12.3"
skyapex-sdk = { path = "../lib/skyapex/skyapex-sdk" }

[build-dependencies]
prost-build = "0.12.3"
