[package]
name = "apexsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "apexsky"
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "apexsky_dma"
path = "src/apex_dma/main.rs"

[dependencies]
libc = "0.2.153"
lazy_static = "1.4.0"
config = { version = "0.14.0", default-features = false, features = ["toml", "yaml"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.11"
ratatui = { version = "0.25.0", features = ["all-widgets", "serde"] }
crossterm = "0.27.0"
anyhow = "1.0.81"
fluent = "0.16.0"
unic-langid = "0.9.4"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
sys-locale = "0.3.1"
unicode-width = "0.1.11"
serde_json = { version = "1.0.114", features = ["indexmap", "preserve_order"] }
entropy = "0.4.2"
rand = "0.8.5"
indexmap = { version = "2.2.5", features = ["serde"] }
zbus = { version = "4.1.2", default-features = false, features = ["tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
chrono = "0.4.35"
chinese-lunisolar-calendar = "0.2.0"
obfstr = "0.4.3"
include-flate = "0.3.0"
prost = "0.12.3"
skyapex-sdk = { path = "../lib/skyapex/skyapex-sdk" }
memflow = "0.2.1"
memprocfs = "5.9.0"
dataview = "1.0.1"
once_cell = "1.19.0"
bitset = "0.1.2"
named_constants = "0.2.0"
bitset-core = "0.1.1"
intptr = { version = "0.1.6", features = ["dataview_1", "serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "chrono", "env-filter"] }
#console-subscriber = "0.1.5"
ndarray = "0.15.6"
tracing-appender = "0.2.3"
opentelemetry_sdk = { version = "0.22.1", features = ["tokio", "serde", "serde_json", "rt-tokio"] }
opentelemetry = "0.22.0"
tracing-opentelemetry = "0.23.0"
opentelemetry-otlp = { version = "0.15.0", features = ["serde", "tls"] }
bevy = { version = "0.13.0", features = ["wayland"] }
bevy_egui = "0.25.0"
parking_lot = { version = "0.12.1", features = ["arc_lock", "nightly", "owning_ref", "serde"] }

[build-dependencies]
prost-build = "0.12.3"
