[package]
name = "apexsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "apexsky"
crate-type = ["rlib", "staticlib"]

[dependencies]
libc = "0.2.154"
config = { version = "0.14.0", default-features = false, features = ["toml"] }
serde = { version = "1.0.201", features = ["derive"] }
toml = "0.8.12"
ratatui = { version = "=0.25.0", features = ["all-widgets", "serde"] }
crossterm = "0.27.0"
anyhow = "1.0.83"
fluent = "0.16.1"
unic-langid = "0.9.4"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
sys-locale = "0.3.1"
unicode-width = "0.1.12"
serde_json = { version = "1.0.117", features = ["preserve_order"] }
entropy = "0.4.2"
rand = "0.8.5"
indexmap = { version = "2.2.6", features = ["serde"] }
zbus = { version = "4.2.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.38"
chinese-lunisolar-calendar = "0.2.0"
obfstr = "0.4.3"
include-flate = "0.3.0"
prost = "0.12.4"
skyapex-sdk = { path = "../../apex_dma/lib/skyapex/skyapex-sdk" }
once_cell = "1.19.0"
tracing = "0.1.40"
deno_ast = { version = "0.38.1", features = ["transpiling"] }
deno_core = "0.279.0"
reqwest = { version = "0.12.4", default-features = false, features = ["charset", "http2", "macos-system-configuration", "blocking", "json", "rustls-tls"] }

[build-dependencies]
prost-build = "0.12.4"
