[package]
name = "apexsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "apexsky"
crate-type = ["rlib", "staticlib"]

[dependencies]
libc = "0.2.155"
config = { version = "0.14", default-features = false, features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ratatui = { version = "=0.25.0", features = ["all-widgets", "serde"] }
crossterm = "0.27.0"
anyhow = "1.0"
fluent = "0.16.1"
unic-langid = "0.9.5"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.4"
sys-locale = "0.3.1"
unicode-width = "0.1.13"
serde_json = { version = "1.0", features = ["preserve_order"] }
entropy = "0.4.2"
rand = "0.8.5"
indexmap = "2.2.6"
zbus = { version = "4.3.1", default-features = false, features = ["tokio"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
chrono = "0.4.38"
chinese-lunisolar-calendar = "0.2.0"
obfstr = "0.4.3"
include-flate = "0.3.0"
skyapex-sdk = { path = "../../apex_dma/lib/skyapex/skyapex-sdk" }
once_cell = "1.19.0"
tracing = "0.1.40"
deno_ast = { version = "0.40.0", features = ["transpiling"] }
deno_core = "0.293.0"
reqwest = { version = "0.12.5", default-features = false, features = ["charset", "http2", "macos-system-configuration", "blocking", "json", "rustls-tls"] }
hex = { version = "0.4.3", features = ["serde"] }
async-trait = "0.1.81"
async-channel = "2.3.1"
tar = "0.4.41"
async-compression = { version = "0.4.11", features = ["zstdmt", "tokio"] }
