[package]
name = "apexsky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "apexsky"
crate-type = ["rlib", "staticlib"]

[dependencies]
libc = "0.2.159"
config = { version = "0.14", default-features = false, features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ratatui = { version = "0.28.1", features = ["all-widgets", "serde"] }
crossterm = "0.28.1"
anyhow = "1.0"
fluent = "0.16.1"
futures = "0.3.30"
unic-langid = "0.9.5"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
sys-locale = "0.3.1"
unicode-width = "0.2.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
entropy = "0.4.2"
rand = "0.8.5"
indexmap = "2.6.0"
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
thiserror = "1.0.64"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
chinese-lunisolar-calendar = "0.2.0"
obfstr = "0.4.3"
include-flate = "0.3.0"
skyapex-sdk = { path = "../../apex_dma/lib/skyapex/skyapex-sdk" }
once_cell = "1.20.1"
tracing = "0.1.40"
reqwest = { version = "0.12.8", default-features = false, features = ["charset", "http2", "macos-system-configuration", "json", "rustls-tls"] }
hex = { version = "0.4.3", features = ["serde"] }
apexsky_utils = { path = "../apexsky_utils" }
