[package]
name = "apexsky_dma"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
apexsky = { path = "../apexsky" }
apexsky_dmalib = { path = "../apexsky_dmalib" }
apexsky_kmbox = { path = "../apexsky_kmbox" }
apexsky_proto = { path = "../apexsky_proto" }
async-trait = "0.1.80"
bitset-core = "0.1.1"
chrono = "0.4.38"
#console-subscriber = "0.1.5"
crossbeam-skiplist = "0.1.3"
dataview = "1.0.1"
enum_dispatch = "0.3.13"
futures-util = "0.3.30"
hex = "0.4.3"
include-flate = "0.3.0"
indexmap = "2.2.6"
intptr = { version = "0.1.6", features = ["dataview_1", "serde"] }
named_constants = "0.2.0"
ndarray = "0.15.6"
nix = "0.29.0"
obfstr = "0.4.3"
once_cell = "1.19.0"
parking_lot = { version = "0.12.3", features = ["nightly", "deadlock_detection"] }
prost = "0.12.6"
qapi = { version = "0.14.0", features = ["qmp", "async-tokio-all"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.38.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["zstd", "gzip"] }
tonic-web = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "chrono", "env-filter"] }
tracing-appender = "0.2.3"
users = "0.11.0"
