[package]
name = "apexsky_dma"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
apexsky = { path = "../apexsky" }
apexsky_dmalib = { path = "../apexsky_dmalib" }
apexsky_extension = { path = "../apexsky_extension" }
apexsky_kmbox = { path = "../apexsky_kmbox" }
apexsky_proto = { path = "../apexsky_proto" }
async-channel = "2.3.1"
async-trait = "0.1.81"
bitset-core = "0.1.1"
chrono = "0.4.38"
#console-subscriber = "0.1.5"
crossbeam-skiplist = "0.1.3"
crossterm = "0.28.1"
dataview = "1.0.1"
enum_dispatch = "0.3.13"
fakeit = "1.3.0"
futures-util = "0.3.30"
hex = "0.4.3"
include-flate = "0.3.0"
indexmap = "2.4.0"
intptr = { version = "0.1.6", features = ["dataview_1", "serde"] }
itertools = "0.13.0"
named_constants = "0.2.0"
ndarray = "0.16.1"
obfstr = "0.4.3"
once_cell = "1.19.0"
parking_lot = { version = "0.12.3", features = ["nightly"] }
prost = "0.13.1"
qapi = { version = "0.14.0", features = ["qmp", "async-tokio-all"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.39.3", features = ["full"] }
tonic = { version = "0.12.1", features = ["zstd", "gzip"] }
tonic-web = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "chrono", "env-filter"] }
tracing-appender = "0.2.3"

[target.'cfg(unix)'.dependencies]
nix = "0.29.0"
uzers = "0.12.1"
