[package]
name = "apexsky_dmalib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
apexsky_utils = { path = "../apexsky_utils" }
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
dataview = "1.0.1"
enum_dispatch = "0.3.13"
memflow = "0.2.3"
memflow-qemu = { git = "https://github.com/memflow/memflow-qemu", rev = "78bdf30" }
memflow-win32 = "0.2.0"
memprocfs = "5.11.7"
obfstr = "0.4.3"
once_cell = "1.20.1"
parking_lot = { version = "0.12.3", features = ["nightly"] }
pelite = { version = "0.10.0", features = ["unstable"] }
pe-parser = "0.6.0"
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
thiserror = "1.0.64"
