[package]
name = "apexsky_extension"
version = "0.1.0"
edition = "2021"

[lib]
name = "apexsky_extension"
path = "src/lib.rs"

[[bin]]
name = "apexsky_extension_packer"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0"
async-channel = "2.3.1"
async-compression = { version = "0.4.11", features = ["zstdmt", "tokio"] }
async-trait = "0.1.81"
deno_ast = { version = "0.40.0", features = ["transpiling"] }
deno_core = "0.293.0"
indexmap = { version = "2.2.6", features = ["serde"] }
obfstr = "0.4.3"
reqwest = { version = "0.12.5", default-features = false, features = ["charset", "http2", "macos-system-configuration", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tar = "0.4.41"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
