[package]
name = "apexsky_kmbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
embedded-graphics = "0.8.1"
obfstr = "0.4.3"
once_cell = "1.19.0"
rand = "0.8.5"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["net", "io-util", "time"] }
tokio-serial = "5.4.4"
tracing = "0.1.40"
zerocopy = { version = "0.7.34", features = ["derive"] }
