[package]
name = "apexsky_kmbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
embedded-graphics = "0.8.1"
obfstr = "0.4.3"
once_cell = "1.19.0"
rand = "0.8.5"
serial2-tokio = { version = "0.1.13", features = ["unix", "windows"] }
thiserror = "1.0.63"
tokio = { version = "1", features = ["net", "io-util", "time"] }
tracing = "0.1.40"
zerocopy = { version = "0.7.35", features = ["derive"] }
