[package]
name = "apexsky_navigator"
version = "0.1.0"
edition = "2021"

[dependencies]
ambisonic = "0.4.1"
anyhow = "1.0"
apexsky_proto = { path = "../apexsky_proto" }
chrono = "0.4.38"
enum_dispatch = "0.3.13"
indexmap = "2.2.6"
ndarray = "0.15.6"
once_cell = "1.19.0"
prost = "0.12.6"
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["zstd"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "chrono", "env-filter"] }
tracing-appender = "0.2.3"
